# simplified_gfx_glyph

./: Cargo.toml  README.md
examples/html/: display_document.rs  document.html  html_document.rs  main.rs
src/: builder.rs  lib.rs  pipe.rs
